2008-05-23  Kouhei Sutou  <kou@cozmixng.org>

	* test/run-test.rb: use which not --version to detect make.

2008-05-23  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-bin.c: Add Gst::Bin#to_dot_file and
	Gst::Bin#to_dot_file_with_ts to dump pipelines to dot files

2008-05-21  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-bus.c: Don't use ALLOC to allocate data that's going
	to be freed with g_free, use g_new instead.

2008-05-21  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: Actually read the data coming from the notify fd.
	As rb_wait_for_fd can return before there is data available on the fd.

2008-05-21  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_thread_handling.rb
	(TestThreadHandling#test_state_changes): fix indentation.

	* test/gst-test-utils.rb (GstTestUtils#only_gst_version): add.

	* test/test_thread_handling.rb (TestThreadHandling): require
	GStreamer 0.10.16 for using identity element's signal-handoffs
	property.

2008-05-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst.c: don't use rb_argv variable name for ruby 1.9.x.
	Patch by Joao Pedrosa. Thanks!!!

2008-05-18  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: gst_element_get_request_pad gives us a ref. So
	GST_PAD2RVAL_UNREF need to be used to avoid leaking refs

2008-05-18  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-bin.c: Call G_CHILD_REMOVE when removing elements from a bin

2008-05-18  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-buffer.c: use rb_str_new to implement Gst::Buffer#data. The data
	isn't a \0 terminated C string, so need to specify the size to copy

2008-05-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst.c (rb_gst_init): don't use global rb_argv.

2008-05-02  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-message.c: use GERROR2RVAL().

2008-04-30  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-bin.c: Add Gst::Bin#each_recurse and Gst::Bin#children_recurse
	which iterate/get all children of the bin and all its sub-bins recursively
